complete task checkbox validation

--- a/src/index.html
+++ b/src/index.html
@@ -31,19 +31,11 @@
                
               </ul>
             </div>
-            <!-- <div class="conplete-list box">
+            <div class="conplete-list box">
               <h2>Completed Tasks</h2>
-              <ul>
-                <li class="item">
-                  <input type="checkbox" /> <label> Task name</label>
-                  <button class="deleteBtn">Delete</button>
-                </li>
-                <li class="item">
-                  <input type="checkbox" /> <label> Task name</label>
-                  <button class="deleteBtn">Delete</button>
-                </li>
+              <ul id="CompletedUl">
               </ul>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
